@@ -891,6 +891,7 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
                 self.installed_pane.loaded = False
                 self.installed_pane.show_app(app)
             else:
+                self.view_switcher.set_view(VIEW_PAGE_AVAILABLE)
                 self.available_pane.show_app(app)
 
         if len(packages) > 1:
