@@ -181,10 +181,10 @@ class InstalledPane(SoftwarePane):
     def show_app(self, app):
         """ Display an application in the installed_pane """
         self.navigation_bar.add_with_id(_("Installed Software"), self.on_navigation_list, "list", do_callback=False, animate=False)
-        self.navigation_bar.add_with_id(app.name, self.on_navigation_details, "details", animate=True)
+        self.navigation_bar.remove_all(do_callback=False, animate=False) # do_callback and animate *must* both be false here
+        self.navigation_bar.add_with_id(app.name, self.on_navigation_details, "details", animate=False)
         self.app_details.show_app(app)
         self.app_view.emit("application-selected", app)
-        self.notebook.set_current_page(self.PAGE_APP_DETAILS)
 
 if __name__ == "__main__":
 
